--- a/index.html
+++ b/index.html
@@ -14,27 +14,34 @@
             <div id="jxgbox1" class="jxgbox"></div>
             <button class="draw-line" data-board="1">Dibujar Recta</button>
             <button class="draw-point" data-board="1">Dibujar Punto</button>
+            <button class="clear-board" data-board="1">Limpiar Tablero</button>
         </div>
         <div class="board-container">
             <div id="jxgbox2" class="jxgbox"></div>
             <button class="draw-line" data-board="2">Dibujar Recta</button>
             <button class="draw-point" data-board="2">Dibujar Punto</button>
+            <button class="clear-board" data-board="2">Limpiar Tablero</button>
         </div>
         <div class="board-container">
             <div id="jxgbox3" class="jxgbox"></div>
             <button class="draw-line" data-board="3">Dibujar Recta</button>
             <button class="draw-point" data-board="3">Dibujar Punto</button>
+            <button class="clear-board" data-board="3">Limpiar Tablero</button>
         </div>
         <div class="board-container">
             <div id="jxgbox4" class="jxgbox"></div>
             <button class="draw-line" data-board="4">Dibujar Recta</button>
             <button class="draw-point" data-board="4">Dibujar Punto</button>
+            <button class="clear-board" data-board="4">Limpiar Tablero</button>
         </div>
         <div class="board-container">
             <div id="jxgbox5" class="jxgbox"></div>
             <button class="draw-line" data-board="5">Dibujar Recta</button>
             <button class="draw-point" data-board="5">Dibujar Punto</button>
+            <button class="clear-board" data-board="5">Limpiar Tablero</button>
         </div>
     </div>
+</body>
+</html>
 </body>
 </html>
