Modificacion html file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <div class="jxg-container">
+    <!--<div class="jxg-container">
         <div class="board-container">
             <div id="jxgbox1" class="jxgbox"></div>
             <button class="draw-line" data-board="1">Dibujar Recta</button>
@@ -40,6 +40,9 @@
             <button class="draw-point" data-board="5">Dibujar Punto</button>
             <button class="clear-board" data-board="5">Limpiar Tablero</button>
         </div>
+    </div>-->
+    <div class="container">
+        <div id="boards-container"></div>
     </div>
 </body>
 </html>
